--- a/index.html
+++ b/index.html
@@ -169,14 +169,26 @@ const form = document.getElementById('copilotForm');
 const promptInput = document.getElementById('prompt');
 let history = []; // stores [{q: ..., a: ...}, ...]
 
+// UTIL: SSE event parser for event:... data:... blocks
+function parseSSEEvents(text) {
+  const events = [];
+  const regex = /event:\s*(.*?)\s*data:\s*({.*?})\s*(?=event:|$)/gs;
+  let match;
+  while ((match = regex.exec(text)) !== null) {
+    events.push({
+      event: match[1],
+      data: match[2]
+    });
+  }
+  return events;
+}
+
 form.onsubmit = async function(e){
   e.preventDefault();
   const prompt = promptInput.value.trim();
   if (!prompt) return;
-  // Show user's question "optimistically"
   addToHistory(prompt, "<em>Working...</em>");
   promptInput.value = "";
-  // Compose request, same as before
   const id = ULID.ulid();
   const sessionObj = {
     user_id: id,
@@ -187,34 +199,52 @@ form.onsubmit = async function(e){
     interactions:[]
   };
   const queryObj = { id: id, prompt: prompt };
-  const res = await fetch('/assist', {
-    method:'POST',
-    headers:{'Content-Type':'application/json'},
-    body:JSON.stringify({
-      session: sessionObj,
-      query: queryObj
-    })
-  });
-  const reader = res.body.getReader();
-  let decoder = new TextDecoder();
-  let buffer = '';
-  let payloadContent = "";
-  while (true) {
-    const {done, value} = await reader.read();
-    if (done) break;
-    buffer += decoder.decode(value);
-    const lines = buffer.split('\n').filter(x => x.startsWith('data:'));
-    for (const line of lines) {
-      try {
-        const payload = JSON.parse(line.replace(/^data:\s*/, ''));
-        if (payload.content && payload.content.trim().length > 0) {
-          payloadContent = payload.content;
-          updateLastAnswer(payloadContent);
+
+  try {
+    const res = await fetch('/assist', {
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({
+        session: sessionObj,
+        query: queryObj
+      })
+    });
+    if (!res.ok) {
+      updateLastAnswer(`<b>Network/server error:</b> HTTP ${res.status}`);
+      return;
+    }
+    const reader = res.body.getReader();
+    let decoder = new TextDecoder();
+    let buffer = "";
+    while (true) {
+      const {done, value} = await reader.read();
+      if (done) break;
+      buffer += decoder.decode(value, {stream: true});
+      // process all complete 'event: ... data: ...' blocks
+      const events = parseSSEEvents(buffer);
+      let lastContent = null;
+      for (const evt of events) {
+        try {
+          const payload = JSON.parse(evt.data);
+          if (payload.content && payload.content.trim().length > 0) {
+            lastContent = payload.content;
+          }
+        } catch(e) {
+          // fallback for broken chunk
+          lastContent = evt.data;
         }
-      } catch (e) {
-        updateLastAnswer(buffer);
+      }
+      if (lastContent != null) {
+        updateLastAnswer(lastContent);
+      }
+      if (events.length > 0) {
+        buffer = buffer.slice(buffer.lastIndexOf('data:'));
+        if(buffer.indexOf('\n') > -1) buffer = buffer.slice(buffer.indexOf('\n'));
       }
     }
+  } catch (err) {
+    updateLastAnswer("<b>Network error: </b>" + err);
+    console.error('Network error:', err);
   }
 };
 
@@ -240,7 +270,11 @@ function renderHistory() {
 function escapeHTML(str) {
   return str.replace(/[&<>"']/g, function(m) {
     return ({
-      '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;', "'":'&#39;'
+      '&':'&amp;',
+      '<':'&lt;',
+      '>':'&gt;',
+      '"':'&quot;',
+      "'":'&#39;'
     })[m];
   });
 }
